[gd_scene load_steps=10 format=2]

[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=1]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=2]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_HandModel_Right.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_HandModel_Left.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/portableMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/player.gd" type="Script" id=9]

[node name="Player" type="Spatial"]
script = ExtResource( 9 )

[node name="OQ_ARVROrigin" parent="." instance=ExtResource( 3 )]

[node name="OQ_ARVRCamera" parent="OQ_ARVROrigin" instance=ExtResource( 4 )]

[node name="OQ_LeftController" parent="OQ_ARVROrigin" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Feature_HandModel_Left" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 7 )]

[node name="PortableMenu" parent="OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 8 )]

[node name="OQ_RightController" parent="OQ_ARVROrigin" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Feature_UIRayCast" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 5 )]

[node name="Feature_HandModel_Right" parent="OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 6 )]
